# eigen_diff

./: CMakeLists.txt  package.xml
include/eigen_diff/: AutoDiffChainHessian.h  AutoDiffChainHessianSparse.h  AutoDiffChainJacobian.h  AutoDiffChainJacobianSparse.h  AutoDiffScalar.h
src/: eigen_diff.cpp  eigen_diff_sparse.cpp
